# LibrePCB

./: CMakeLists.txt  README.md
apps/UuidGenerator/: CMakeLists.txt
apps/librepcb/: CMakeLists.txt
apps/librepcb-cli/: CMakeLists.txt
ci/: azure-jobs-linux.yml  azure-jobs-macos.yml  azure-jobs-windows.yml  build_librepcb.sh
cmake/: FindMuParser.cmake  FindQuaZip.cmake  FindTypeSafe.cmake
dev/: format_code.sh
dev/doxygen/pages/: building.md  developers.md  release_workflow.md  server_api.md
img/: README.md  images.qrc
libs/librepcb/common/: CMakeLists.txt  build_env.h.in  common.pro  toolbox.cpp  toolbox.h
libs/librepcb/common/dialogs/: aboutdialog.cpp
libs/librepcb/common/fileio/: directorylock.cpp  transactionalfilesystem.cpp
libs/librepcb/common/network/: networkrequestbase.cpp  networkrequestbase.h  orderpcbapirequest.cpp  orderpcbapirequest.h
libs/librepcb/eagleimport/: CMakeLists.txt
libs/librepcb/libraryeditor/: CMakeLists.txt  libraryeditor.cpp  libraryeditor.pro  libraryeditor.ui
libs/librepcb/libraryeditor/common/: editorwidgetbase.h
libs/librepcb/libraryeditor/pkg/: packageeditorwidget.cpp
libs/librepcb/libraryeditor/pkg/fsm/: packageeditorfsm.cpp  packageeditorfsm.h  packageeditorstate_drawarc.cpp  packageeditorstate_drawarc.h  packageeditorstate_drawpolygonbase.cpp  packageeditorstate_drawpolygonbase.h
libs/librepcb/libraryeditor/sym/: symboleditorwidget.cpp
libs/librepcb/libraryeditor/sym/fsm/: symboleditorfsm.cpp  symboleditorfsm.h  symboleditorstate_drawarc.cpp  symboleditorstate_drawarc.h  symboleditorstate_drawpolygonbase.cpp  symboleditorstate_drawpolygonbase.h
libs/librepcb/librarymanager/: CMakeLists.txt
libs/librepcb/project/: CMakeLists.txt
libs/librepcb/project/boards/: board.cpp  board.h
libs/librepcb/projecteditor/: CMakeLists.txt  projecteditor.cpp  projecteditor.h  projecteditor.pro
libs/librepcb/projecteditor/boardeditor/: boardeditor.cpp  boardeditor.ui
libs/librepcb/projecteditor/boardeditor/fsm/: boardeditorstate_addvia.cpp  boardeditorstate_select.cpp
libs/librepcb/projecteditor/dialogs/: orderpcbdialog.cpp  orderpcbdialog.h  orderpcbdialog.ui
libs/librepcb/projecteditor/schematiceditor/: schematiceditor.cpp  schematiceditor.ui
libs/librepcb/projecteditor/schematiceditor/fsm/: schematiceditorstate_addcomponent.cpp  schematiceditorstate_drawwire.cpp
libs/librepcb/workspace/: CMakeLists.txt
tests/unittests/: CMakeLists.txt
tests/unittests/common/: systeminfotest.cpp  toolboxtest.cpp
tests/unittests/common/fileio/: directorylocktest.cpp
tests/unittests/common/units/: angletest.cpp
